# semhash-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/architecture/: parity-benchmarking.md
examples/: quickstart.rs  reference_benchmark.rs
scripts/: benchmark_reference_parity.py  verify_repo_hygiene.py
src/: datamodels.rs  error.rs  index.rs  lib.rs  records.rs  semhash.rs  strategy.rs  utils.rs
tests/: api.rs  reference_parity.rs
